--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ version = '0.1-SNAPSHOT'
 group = 'com.pros'
 
 repositories {
+	//Repositories to get the artifacts
 	mavenRepo(name: 'remoteRepo', url: repositoryURL + '/repo')
 }
 
